test/libsolidity/syntaxTests/using/global_for_type_defined_elsewhere.sol
using {f} for L.S global;
function f(L.S memory) pure{}
library L {
    struct S { uint x; }
}
// ----
// TypeError 4117: (0-25): Can only use "global" with types defined in the same source unit at file level.
